--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,6 @@
 </head>
 <body>
   <div id="root"></div>
-  <script type="module" src="/static/assets/vendor.js"></script>
-  <script type="module" src="/static/assets/index.js"></script>
+  <script type="module" src="/src/main.tsx"></script>
 </body>
 </html>
